# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Mar  7 2024 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved DatabaseMetaData.getTypeInfo(). It now also returns the serial
  and bigserial data types and all 13 possible interval data types.

* Thu Dec 28 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- In ResultSet.getObject(column, Class<T> type) and
  ResultSet.getObject(column, Map<String,Class<?>>) methods added support
  to return objects for classes: java.time.LocalDate, java.time.LocalDateTime
  and java.time.LocalTime.

* Wed Dec 20 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Enhanced DatabaseMetaData.getTables() method by adding support for SQL
  table type names: 'BASE TABLE', 'GLOBAL TEMPORARY' and 'LOCAL TEMPORARY'
  in parameter types[].  These are SQL synonyms of MonetDB table type names:
  'TABLE', 'GLOBAL TEMPORARY TABLE' and 'LOCAL TEMPORARY TABLE'.

* Thu Dec 14 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- In ResultSet.getObject() method added support for retrieving
  TIMESTAMP WITH TIME ZONE data as java.time.OffsetDateTime object
  and TIME WITH TIME ZONE as java.time.OffsetTime object.
  Also methods ResultSetMetaData.getColumnClassName() and
  ParameterMetaData.getParameterClassName() now return
  java.time.OffsetDateTime.class for columns of type TIMESTAMP WITH TIME ZONE
  and java.time.OffsetTime.class for columns of type TIME WITH TIME ZONE.

* Thu Oct 12 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved DatabaseMetaData.getSystemFunctions(). It now also returns
  functions: current_sessionid, greatest, ifnull, least, sql_max, sql_min.
  Function ifnull will only be returned for servers Jun2023 (11.47 or higher).

* Wed Aug  9 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Implemented ResultSet methods:
   <T> T getObject(int columnIndex, Class<T> type)